# SPDX-FileCopyrightText: © 2024 Matt Williams <matt.williams@bristol.ac.uk>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "clifton"
version = "0.1.21"
edition = "2021"
build = "build.rs"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
built = { version = "0.7", default-features = false, features = [] }
clap = { version = "4.5.6", default-features = false, features = ["derive", "color", "help", "usage", "error-context", "suggestions", "env", "std", "string"] }

[build-dependencies]
built = { version = "0.7", default-features = false, features = ["git2"] }
